# Environment-Sensitive-and-Interactive-Robot

./: .gitignore  README.md
cor_mdp_husky_description/rviz/: cor_mdp_husky_navigation.rviz
cor_mdp_husky_description/urdf/: duot06_description.urdf.xacro
cor_mdp_husky_gazebo/launch/: cor_mdp_husky_gazebo.launch  husky_lely.launch  husky_samxl.launch  test.launch
cor_mdp_husky_gazebo/worlds/: lely.world
cor_mdp_husky_moveit_config/: .setup_assistant
cor_mdp_husky_moveit_config/config/: fake_controllers.yaml  husky.srdf  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml
cor_mdp_husky_moveit_config/launch/: demo.launch  fake_moveit_controller_manager.launch.xml  husky_moveit_controller_manager.launch.xml  move_group.launch  planning_context.launch  ros_controllers.launch  trajectory_execution.launch.xml
human_robot_interaction/: Husky Observation Layout.json  README.md  package.xml
human_robot_interaction/launch/: human_robot_interaction.launch
human_robot_interaction/src/: hri_fsm_node.py  (+1 more)
motion_control/: CMakeLists.txt  README.md  package.xml  setup.py
motion_control/launch/: motion_control.launch
motion_control/scripts/: motion_control.py
obstacle_avoidance/: CMakeLists.txt  README.md  package.xml
obstacle_avoidance/apf_avoider/: apf_avoider.py  apf_multi_avoider.py  apf_real_avoider.py  apf_velocity_avoider.py
obstacle_avoidance/fake_map/: fake_map.py  lely_map.yaml
obstacle_avoidance/fake_waypoints/: fake_waypoints.py
obstacle_avoidance/launch/: demo.launch  obstacle_avoidance.launch
path_planning/: CMakeLists.txt  package.xml  readme.md  setup.py
path_planning/launch/: path_planning.launch
path_planning/scripts/: path_planning.py
path_planning/scripts/archive/: path_planning_copy.py  path_planning_tests.py  path_planning_tests_first_warpoint.py
perception_node/: CMakeLists.txt  README.md  package.xml
(+6 files in other folders)
